{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 213,
  "lineage": "157b3932-5cae-c7d0-23fc-1684155fa801",
  "resources": [
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kiwi-dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "arn_suffix": "app/kiwi-dev-alb/a85512dfaf63d55a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kiwi-dev-alb-422851354.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kiwi-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a93545982e43336e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b5a59dca5d000416"
              },
              {
                "subnet_id": "subnet-0c557d32aef2e2e53"
              }
            ],
            "subnets": [
              "subnet-0b5a59dca5d000416",
              "subnet-0c557d32aef2e2e53"
            ],
            "tags": {
              "Name": "kiwi-dev-alb"
            },
            "tags_all": {
              "Name": "kiwi-dev-alb"
            },
            "vpc_id": "vpc-0bbd5d7a028d1f087",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kiwi-dev-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/a85512dfaf63d55a/6643638be31b920a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/a85512dfaf63d55a/6643638be31b920a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.kiwi-dev-alb",
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kiwi-dev-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "arn_suffix": "targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kiwi-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kiwi-dev-tg-a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db-20230513053951385900000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "target_id": "i-0cf02261680283fcf"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kiwi-dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "arn_suffix": "app/kiwi-dev-alb/a85512dfaf63d55a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kiwi-dev-alb-422851354.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kiwi-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a93545982e43336e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b5a59dca5d000416"
              },
              {
                "subnet_id": "subnet-0c557d32aef2e2e53"
              }
            ],
            "subnets": [
              "subnet-0b5a59dca5d000416",
              "subnet-0c557d32aef2e2e53"
            ],
            "tags": {
              "Name": "kiwi-dev-alb"
            },
            "tags_all": {
              "Name": "kiwi-dev-alb"
            },
            "vpc_id": "vpc-0bbd5d7a028d1f087",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kiwi-dev-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/a85512dfaf63d55a/6643638be31b920a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:listener/app/kiwi-dev-alb/a85512dfaf63d55a/6643638be31b920a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:loadbalancer/app/kiwi-dev-alb/a85512dfaf63d55a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.kiwi-dev-alb",
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kiwi-dev-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "arn_suffix": "targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kiwi-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "dependencies": [
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[1]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kiwi-dev-tg-a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db-20230513053951210600000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:382303303503:targetgroup/kiwi-dev-tg/85089172a3fe04db",
            "target_id": "i-0975a25d4c35ffded"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.kiwi-dev-tg",
            "module.ec2.aws_instance.app",
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-0cf02261680283fcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf02261680283fcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c04d4dd749e5efb",
            "private_dns": "ip-10-0-1-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-44-201-112-8.compute-1.amazonaws.com",
            "public_ip": "44.201.112.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d69ffa3c3898cc5d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c557d32aef2e2e53",
            "tags": {
              "Name": "kiwi-app0"
            },
            "tags_all": {
              "Name": "kiwi-app0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e2d534c93a23c40"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-0975a25d4c35ffded",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0975a25d4c35ffded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fc5b34c05071c03",
            "private_dns": "ip-10-0-1-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-3-89-31-139.compute-1.amazonaws.com",
            "public_ip": "3.89.31.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0387ffbff5e5e5097",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c557d32aef2e2e53",
            "tags": {
              "Name": "kiwi-app1"
            },
            "tags_all": {
              "Name": "kiwi-app1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e2d534c93a23c40"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-057d2816e8103b829",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057d2816e8103b829",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0132b25ea870b8dc2",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-34-238-116-191.compute-1.amazonaws.com",
            "public_ip": "34.238.116.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e437399eae2eff00",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c557d32aef2e2e53",
            "tags": {
              "Name": "kiwi-backend"
            },
            "tags_all": {
              "Name": "kiwi-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036f30549a341d2fa"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_security_group.backend-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:382303303503:instance/i-0facc5bb9b4d99b85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0facc5bb9b4d99b85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiwigate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b9b72c6e8653d7e",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-54-211-179-164.compute-1.amazonaws.com",
            "public_ip": "54.211.179.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ff361ab55a54b3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c557d32aef2e2e53",
            "tags": {
              "Name": "kiwi-jenkins"
            },
            "tags_all": {
              "Name": "kiwi-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a9146faf9c9c80d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.jenkins-sg",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kiwi-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:internet-gateway/igw-0b7c2345653410ee6",
            "id": "igw-0b7c2345653410ee6",
            "owner_id": "382303303503",
            "tags": {
              "Name": "kiwi-igw"
            },
            "tags_all": {
              "Name": "kiwi-igw"
            },
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:route-table/rtb-054b2b1137489d57c",
            "id": "rtb-054b2b1137489d57c",
            "owner_id": "382303303503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7c2345653410ee6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiwi-route1"
            },
            "tags_all": {
              "Name": "kiwi-route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:route-table/rtb-0a83a208ff0f56c2c",
            "id": "rtb-0a83a208ff0f56c2c",
            "owner_id": "382303303503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7c2345653410ee6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiwi-route2"
            },
            "tags_all": {
              "Name": "kiwi-route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05feadd836c66d331",
            "route_table_id": "rtb-054b2b1137489d57c",
            "subnet_id": "subnet-0c557d32aef2e2e53"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_route_table.route1",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0ba2db7352cf7a9",
            "route_table_id": "rtb-0a83a208ff0f56c2c",
            "subnet_id": "subnet-0b5a59dca5d000416"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kiwi-igw",
            "module.vpc.aws_route_table.route2",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-0a93545982e43336e",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0a93545982e43336e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-alb-sg"
            },
            "tags_all": {
              "Name": "kiwi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-06e2d534c93a23c40",
            "description": "Allow traffic from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e2d534c93a23c40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "web traffic from alb",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a93545982e43336e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-app-sg"
            },
            "tags_all": {
              "Name": "kiwi-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-036f30549a341d2fa",
            "description": "Allow backend traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036f30549a341d2fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e2d534c93a23c40"
                ],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e2d534c93a23c40"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "TLS from app",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e2d534c93a23c40"
                ],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-backend-sg"
            },
            "tags_all": {
              "Name": "kiwi-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb-sg",
            "module.vpc.aws_security_group.app-sg",
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:security-group/sg-07a9146faf9c9c80d",
            "description": "Allow jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a9146faf9c9c80d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "382303303503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiwi-jenkins-sg"
            },
            "tags_all": {
              "Name": "kiwi-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:subnet/subnet-0c557d32aef2e2e53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c557d32aef2e2e53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382303303503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiwi-sn1"
            },
            "tags_all": {
              "Name": "kiwi-sn1"
            },
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:subnet/subnet-0b5a59dca5d000416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5a59dca5d000416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382303303503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiwi-sn2"
            },
            "tags_all": {
              "Name": "kiwi-sn2"
            },
            "vpc_id": "vpc-0bbd5d7a028d1f087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kiwi-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kiwi-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382303303503:vpc/vpc-0bbd5d7a028d1f087",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08faf3dde5c710af6",
            "default_route_table_id": "rtb-03c99d6539f619e93",
            "default_security_group_id": "sg-06634025d141511cf",
            "dhcp_options_id": "dopt-047ffc8ec8d765a7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbd5d7a028d1f087",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c99d6539f619e93",
            "owner_id": "382303303503",
            "tags": {
              "Name": "kiwi-vpc",
              "Project": "kiwi"
            },
            "tags_all": {
              "Name": "kiwi-vpc",
              "Project": "kiwi"
            }
          }
        }
      ]
    }
  ]
}